<resources>
    <string name="app_name">Flappy Fish</string>
    <string name="best_Score">Best Score</string>

    <string name="play_Again">Play Again</string>

    <string name="game_Over">Game Over</string>
    <string name="score">Score</string>
    <string name="developer_Info">Developed By : Mohammed Yousif
</string>

    <string name="game_Title">The Flappy Fish</string>

    <string name="Tips">Tips : Touch Screen To Play !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_paused">Game Paused !</string>
    <string name="exit_button">EXIT</string>


</resources>
