<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/splash"
    android:layout_height="match_parent"
    tools:context=".Splash_Activity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="281dp"
        android:layout_height="149dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/splash_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"


        android:text="@string/game_Title"
        android:textAlignment="center"
        android:textColor="@color/TheFlappyFish"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_info"
        android:layout_width="466dp"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/developer_Info"
        android:textColor="@color/textInfoColor"
        android:textSize="14sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTips" />

    <TextView
        android:id="@+id/gameTips"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="111dp"
        android:gravity="center"
        android:text="@string/Tips"
        android:textColor="@color/TipsTextView"
        android:textSize="26sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLay" />


    <LinearLayout
        android:id="@+id/linLay"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="233dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/button_easy"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:layout_marginLeft="140dp"
            android:layout_marginStart="140dp"
            android:layout_weight="1"
            android:background="@drawable/button_design"
            android:onClick="on_easy"
            android:text="Easy"
            android:textColor="@color/pauseMenu"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_medium"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginStart="140dp"
            android:layout_weight="1"
            android:background="@drawable/button_design"
            android:onClick="on_medium"
            android:text="Medium"
            android:textColor="@color/pauseMenu"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_hard"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_design"
            android:onClick="on_hard"
            android:text="Hard"
            android:textColor="@color/pauseMenu"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>